--- a/uni_modules/ucs-css/css/flex.css
+++ b/uni_modules/ucs-css/css/flex.css
@@ -16,3 +16,47 @@
 .self-start{align-self: flex-start;}
 .self-end{align-self: flex-end;}
 .self-stretch{align-self: stretch;}
+/* Box-Sizing */ 
+.box-border{box-sizing: border-box}
+.box-content{box-sizing: content-box}
+ /* Flex */
+.flex{display: flex;}
+.flex-none{flex: none;}
+.flex-auto{flex: auto;}
+.flex-0{flex: 0;}
+.flex-1{flex: 1;}
+.flex-2{flex: 2;}
+.flex-3{flex: 3;}
+.flex-4{flex: 4;}
+.flex-5{flex: 5;}
+.flex-6{flex: 6;}
+.flex-7{flex: 7;}
+.flex-8{flex: 8;}
+.flex-9{flex: 9;}
+.flex-10{flex: 10;}
+.flex-11{flex: 11;}
+.flex-12{flex: 12;}
+/* Flex Direction */
+.flex-row{display: flex;flex-direction: row;}
+.flex-column{display: flex;flex-direction: column;}
+.flex-row-reverse{display: flex;flex-direction: row-reverse;}
+.flex-column-reverse{display: flex;flex-direction: column-reverse;}
+/* Flex Wrap */
+.flex-nowrap{flex-wrap: nowrap;}
+.flex-wrap{flex-wrap: wrap;}
+.flex-wrap-reverse{flex-wrap: wrap-reverse;}
+/* Justify Content */
+.justify-center{justify-content: center;}
+.justify-start{justify-content: flex-start;}
+.justify-end{justify-content: flex-end;}
+.justify-between{justify-content: space-between;}
+.justify-around{justify-content: space-around;}
+.justify-items{justify-content: center;align-items: center;}
+/* Position */
+.relative{position: relative;}
+.absolute{position: absolute;}
+.fixed{position: fixed;}
+/* #ifndef UNI-APP-X */
+.static{position: static;}
+.sticky{position: sticky;}
+/* #endif */
