--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -1,5 +1,6 @@
 @import url("css/flex.css");
-
-
 @import url("css/height.css");
+@import url("css/margin.css");
+@import url("css/paddimg.css");
+@import url("css/text.css");
 @import url("css/width.css");
