--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -1,6 +1,4 @@
-@import url("css/flex.css");
-@import url("css/height.css");
-@import url("css/margin.css");
-@import url("css/paddimg.css");
-@import url("css/text.css");
-@import url("css/width.css");
+@import url("css/align-content.css");
+@import url("css/align-items.css");
+@import url("css/align-self.css");
+@import url("css/border-radius.css");
