--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -2,3 +2,5 @@
 @import url("css/align-items.css");
 @import url("css/align-self.css");
 @import url("css/border-radius.css");
+@import url("css/box-sizing.css");
+@import url("css/display.css");
