--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -4,3 +4,10 @@
 @import url("css/border-radius.css");
 @import url("css/box-sizing.css");
 @import url("css/display.css");
+@import url("css/flex.css");
+@import url("css/height.css");
+@import url("css/justify-content.css");
+
+@import url("css/margin.css");
+@import url("css/paddimg.css");
+@import url("css/width.css");
