--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -5,6 +5,11 @@
 @import url("css/box-sizing.css");
 @import url("css/display.css");
 @import url("css/flex.css");
+@import url("css/flex-direction.css");
+@import url("css/flex-wrap.css");
+@import url("css/font-family.css");
+@import url("css/font-size.css");
+
 @import url("css/height.css");
 @import url("css/justify-content.css");
 
