--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -18,6 +18,12 @@
 @import url("css/lines.css");
 @import url("css/margin.css");
 @import url("css/opacity.css");
-
+@import url("css/overflow.css");
 @import url("css/paddimg.css");
+@import url("css/position.css");
+@import url("css/text-align.css");
+@import url("css/text-decoration-line.css");
+@import url("css/text-overflow.css");
+@import url("css/visibility.css");
+@import url("css/white-space.css");
 @import url("css/width.css");
