--- a/uni_modules/ucs-css/index.css
+++ b/uni_modules/ucs-css/index.css
@@ -27,3 +27,4 @@
 @import url("css/visibility.css");
 @import url("css/white-space.css");
 @import url("css/width.css");
+@import url("css/z-index.css");
