--- a/uni_modules/ucs-css/css/font-weight.css
+++ b/uni_modules/ucs-css/css/font-weight.css
@@ -6,6 +6,7 @@
 .font-bold {
 	font-weight: 700;
 }
+
 /* #endif */
 /* #ifndef UNI-APP-X */
 .font-thin {
@@ -20,6 +21,10 @@
 	font-weight: 300;
 }
 
+.font-normal {
+	font-weight: 400;
+}
+
 
 .font-medium {
 	font-weight: 500;
@@ -27,6 +32,10 @@
 
 .font-semibold {
 	font-weight: 600;
+}
+
+.font-bold {
+	font-weight: 700;
 }
 
 .font-extrabold {
