--- a/uni_modules/ucs-css/scss/border-style.scss
+++ b/uni_modules/ucs-css/scss/border-style.scss
@@ -10,3 +10,55 @@
 .border-none{
 	border-style: none;
 }
+
+.border-t-solid{
+	border-top-style: solid;
+}
+.border-t-dashed{
+	border-top-style: dashed;
+}
+.border-t-dotted{
+	border-top-style: dotted;
+}
+.border-t-none{
+	border-top-style: none;
+}
+
+.border-b-solid{
+	border-bottom-style: solid;
+}
+.border-b-dashed{
+	border-bottom-style: dashed;
+}
+.border-b-dotted{
+	border-bottom-style: dotted;
+}
+.border-b-none{
+	border-bottom-style: none;
+}
+
+.border-l-solid{
+	border-left-style: solid;
+}
+.border-l-dashed{
+	border-left-style: dashed;
+}
+.border-l-dotted{
+	border-left-style: dotted;
+}
+.border-l-none{
+	border-left-style: none;
+}
+
+.border-r-solid{
+	border-right-style: solid;
+}
+.border-r-dashed{
+	border-right-style: dashed;
+}
+.border-r-dotted{
+	border-right-style: dotted;
+}
+.border-r-none{
+	border-right-style: none;
+}
