--- a/uni_modules/ucs-css/scss/z-index.scss
+++ b/uni_modules/ucs-css/scss/z-index.scss
@@ -77,3 +77,46 @@
 .z-999 {
 	z-index: 999;
 }
+
+
+// 2024-11-1 新增样式
+
+.z--1 {
+	z-index: -1;
+}
+
+.z--2 {
+	z-index: -2;
+}
+
+.z--3 {
+	z-index: -3;
+}
+
+.z--4 {
+	z-index: -4;
+}
+
+.z--5 {
+	z-index: -5;
+}
+
+.z--6 {
+	z-index: -6;
+}
+
+.z--7 {
+	z-index: -7;
+}
+
+.z--8 {
+	z-index: -8;
+}
+
+.z--9 {
+	z-index: -9;
+}
+
+.z--10 {
+	z-index: -10;
+}
