删除gray系列颜色

--- a/uni_modules/ucs-css/var.scss
+++ b/uni_modules/ucs-css/var.scss
@@ -47,7 +47,7 @@ $ucs-color-danger-8: #931A1E !default;
 $ucs-color-danger-9: #700A11 !default;
 $ucs-color-danger-10: #4D0008 !default;
 
-// 中性灰-1
+// 中性灰
 $ucs-color-grey: #a9aeb8 !default;
 $ucs-color-grey-1: #ffffff !default;
 $ucs-color-grey-2: #f7f8fa !default;
@@ -61,18 +61,3 @@ $ucs-color-grey-9: #4e5969 !default;
 $ucs-color-grey-10: #272e3b !default;
 $ucs-color-grey-11: #1d2129 !default;
 $ucs-color-grey-12: #141414 !default;
-
-// 中性灰-2
-$ucs-color-gray: #bfbfbf !default;
-$ucs-color-gray-1: #ffffff !default;
-$ucs-color-gray-2: #fafafa !default;
-$ucs-color-gray-3: #f5f5f5 !default;
-$ucs-color-gray-4: #f0f0f0 !default;
-$ucs-color-gray-5: #d9d9d9 !default;
-$ucs-color-gray-6: #bfbfbf !default;
-$ucs-color-gray-7: #8c8c8c !default;
-$ucs-color-gray-8: #595959 !default;
-$ucs-color-gray-9: #434343 !default;
-$ucs-color-gray-10: #262626 !default;
-$ucs-color-gray-11: #1f1f1f !default;
-$ucs-color-gray-12: #141414 !default;
