--- a/uni_modules/ucs-css/index.scss
+++ b/uni_modules/ucs-css/index.scss
@@ -1,4 +1,6 @@
 @import "./var.scss";
+// 2025-1-6 新增样式
+@import "./colors/red/index.scss";
 // 2024-11-1 新增样式
 @import "./scss/color.scss";
 @import "./scss/background-color.scss";
